# this-or-that-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/api/: index.html
docs/api/agent/: index.html
docs/api/browser/: index.html
docs/api/cli/: index.html
docs/api/config/: index.html
docs/api/covers/: index.html
docs/api/results/: index.html
docs/api/tools/: index.html
docs/design/roadmap/: index.html
docs/design/software-design/: index.html
docs/design/srs/: index.html
docs/installation/: index.html
docs/search/: search_index.json
docs/usage/: index.html
reports/: improvement-issues.md  test-report.md
site/: adding-a-platform.md  index.md  installation.md  test-users.md  usage.md
site/api/: agent.md  browser.md  cli.md  config.md  covers.md  flow.md  index.md  platform.md  results.md  tools.md
site/design/: .smbdeleteAAA807e08  roadmap.md  software-design.md  srs.md
src/tot_agent/: __init__.py  agent.py  browser.py  cli.py  config.py  covers.py  flow.py  platform.py  results.py  tools.py
tests/: conftest.py
tests/integration/: test_browser_integration.py
tests/unit/: test_agent.py  test_browser.py  test_cli.py  test_config.py  test_covers.py  test_tools.py
